# pysqrtrootof3taker

./: LICENSE  README.md  pyproject.toml  setup.cfg
pysqrtrootof3taker/: pysqrtrootof3taker.py
