[metadata]
name = pysqrtrootof3taker
version = 1.0.0
author = Rudra Singh Rathore
author_email = rudrasinghrathore16022012@gmail.com
description = For computing the square root of 3 fastly and securely in a local environment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheCoderLab/pysqrtrootof3taker
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True